Fix text-align for go pro[aaa:532]

--- a/www/assets/styles/general.less
+++ b/www/assets/styles/general.less
@@ -1260,15 +1260,17 @@ ul li.news-item{
                 background: url("../images/account-alert.png") 12px 13px no-repeat;
             }
             &.text{
-                padding-left: 40px;
                 width: 240px;
                 color: #999;
                 font-size: 1em;
                 line-height: 1.5em;
+                background:none;
+                text-align:left;
+                position:relative;
+                left:4px;
                 ul{ 
                     margin: .75em 0 0 .2em;    
                 }
-                background:none;
                 a{color:#4D98CF;}
             }
         }
